k8s/omegaup/overlays/production/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: b88ebcb11648c459909047a2b3099732200ac8c1
