k8s/omegaup/overlays/production/frontend/database.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-service
  name: mysql-service
spec:
  externalName: omegaup-db-proxy.proxy-csxxrhqs66it.us-east-1.rds.amazonaws.com
  selector:
    app: mysql-service
  type: ExternalName
status:
  loadBalancer: {}
